<resources>
    <string name="app_name">Aicar</string>
    <string name="app_name_pt1">Ai</string>
    <string name="app_name_pt2">car</string>
    <string name="or">O</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="login_msg">Logueate en tu cuenta para comenzar</string>
    <string name="login">Login</string>
    <string name="registrar">Registro</string>
    <string name="olvido_su_clave">Olvido su clave?</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La direccion de correo es invalida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">El usuario o contraseña son incorrectos</string>
    <string name="error_campo_numerico">Debe ingresar solo numeros</string>
    <string name="error_clave_anterior">La clave anterior no coincide</string>
    <string name="error_field_placa_invalid">Numero de placa invalido (ej: ABC123)</string>
    <string name="error_field_no_match">Los campos no coinciden</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings to registro  -->
    <string name="prompt_nombres">Nombres</string>
    <string name="registro">Registro</string>
    <string name="prompt_apellidos">Apellidos</string>
    <string name="prompt_correo">Email</string>
    <string name="prompt_placa">Placa Vehiculo</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_clave">Clave</string>
    <string name="prompt_cedula"># Cedula</string>
    <string name="prompt_clave_confirmacion">Confirmar Clave</string>
    <string name="btn_registrar">Registrar</string>
    <string name="facebook">facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="twitter">twitter</string>
    <string name="registroRecomendacion">Registrarse con (Recomendado)</string>
    <string name="registroEmailLbl">Registrarse con correo</string>
    <string name="alreadyAccount">Ya tienes una cuenta?</string>
    <string name="crear_cuenta">Crear una cuenta</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="aceptar_lbl">Aceptar</string>

    <!-- Facebook api-->
    <string name="facebook_app_id">153076308481203</string>
    <string name="fb_login_protocol_scheme">153076308481203</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Home screen-->
    <string name="serviciosLbl">SERVICIOS</string>
    <string name="hometitle">iCar</string>
    <string name="menuPerfil">Perfil</string>
    <string name="menuHistory">Historial</string>
    <string name="menuAjustes">Ajustes</string>
    <string name="menuSesionTitle">Sesión</string>
    <string name="menuLogout">Salir</string>
    <string name="alertas">Alertas</string>

    <!--General -->
    <string name="salirWarn">Oprima ATRAS nuevamente para salir</string>
    <string name="olvido_pwd_title">Olvide mi contraseña</string>
    <string name="pwd_reminder_label">Ingrese su usuario o contraseña</string>
    <string name="pwd_reminder_label_empty"> </string>
    <string name="aceptar_btn">Acepto</string>
    <string name="cancelar_btn">Cancelar</string>
    <string name="title_activity_editar_perfil">editarPerfil</string>
    <string name="placafoto">placaFoto</string>
    <string name="imagencarro">imagenCarro</string>
    <string name="cambio_title">Cambio de Contraseña</string>
    <string name="clave_anterior_lbl">Clave Anterior</string>
    <string name="nueva_clave_lbl">Nueva Clave</string>
    <string name="title_galeria">Galeria</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_storage">Almacenamiento</string>
    <string-array name="pref_example_list_titles">
        <item>Almacenamiento Interno</item>
        <item>SD Card</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Datos &amp; sync</string>

    <string name="pref_title_sync_frequency">Frecuecia de Sincronización</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Notificar nuevo evento?</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silencio</string>

    <string name="pref_title_vibrate">Vibrar</string>
    <string name="title_activity_historia">HistoriaActivity</string>
    <string name="title_activity_service_detail">ServiceDetailActivity</string>
    <string name="tipo_doc_lbl">Tipo Documento</string>
    <string name="numero_doc_lbl"># Documento</string>
    <string name="detalle_licencia_lbl">Detalle Licencia #</string>
    <string name="detalle_solicitud_lbl">Detalle Solicitud #</string>
    <string name="btn_cerrar_lbl">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
