<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menuPerfil" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_restore_black_24dp"
            android:title="@string/menuHistory" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menuAjustes" />
    </group>

    <item android:title="@string/menuSesionTitle">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menuLogout" />
        </menu>
    </item>

</menu>
