<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/parent"
    android:gravity="top"
    android:orientation="vertical"
    android:weightSum="2"
    android:paddingBottom="@dimen/activity_vertical_margin_no_padding"
    android:paddingLeft="@dimen/activity_horizontal_margin_no_padding"
    android:paddingRight="@dimen/activity_horizontal_margin_no_padding"
    android:paddingTop="@dimen/activity_vertical_margin_no_padding"
    tools:context="io.gothcorp.aicar.ActivitySocialSignUp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/registro_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:gravity = "center_vertical|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/registroRecomendacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:paddingTop="60dp" />

    <Button
        android:text="@string/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFacebook"
        android:onClick="goRegistrarFb" />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
  <!--  <Button
        android:text="@string/google_plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4" />-->

    <!-- <Button
        android:text="@string/twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5" />-->
    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center" />

    <TextView
        android:text="@string/registroEmailLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:paddingTop="30dp" />

    <Button
        android:text="@string/crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goRegistrarWithEmail"
        android:id="@+id/button6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.54"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            tools:ignore="NestedWeights" />

        <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>


</LinearLayout>
