<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="2"
    android:paddingBottom="@dimen/activity_vertical_margin_no_padding"
    android:paddingLeft="@dimen/activity_horizontal_margin_no_padding"
    android:paddingRight="@dimen/activity_horizontal_margin_no_padding"
    android:paddingTop="@dimen/activity_vertical_margin_no_padding"
    tools:context="io.gothcorp.aicar.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:gravity = "center_vertical|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal" />




    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingBottom="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name_pt1"
            android:layout_weight="0.9"
            android:id="@+id/tvLogo1"
            android:gravity="end"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name_pt2"
            android:layout_weight="1.1"
            android:id="@+id/tvLogo2"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:textIsSelectable="false"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nombres"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_apellidos"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_correo"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_cedula"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/placa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_placa"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_usuario"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_clave"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/clave_confirmacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_clave_confirmacion"
                    android:imeActionId="@+id/btn_registrar"
                    android:imeActionLabel="@string/btn_registrar"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="@dimen/activity_horizontal_margin_no_padding">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:id="@+id/goLogin"
            android:padding="@dimen/activity_vertical_margin_no_padding"
            android:layout_margin="0dp"
            android:minHeight="0dp"
            android:textColor="@color/White"
            android:minWidth="0dp"
            android:background="@drawable/ripple_primary"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_registrar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:id="@+id/button2"
            android:padding="@dimen/activity_horizontal_margin_no_padding"
            android:layout_margin="0dp"
            android:background="@drawable/ripple"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>
